log.txt
[2/3] Compiling AVX2 Physics Backend (.dll) ...
vibemath.c: In function 'vmath_swarm_galaxy':
vibemath.c:234:69: error: 'scale' undeclared (first use in this function); did you mean 'scalee'?
  234 |         __m256 v_r = _mm256_fmadd_ps(v_s, _mm256_set1_ps(14000.0f * scale), _mm256_set1_ps(1000.0f * scale));
      |                                                                     ^~~~~
      |                                                                     scalee
vibemath.c:234:69: note: each undeclared identifier is reported only once for each function it appears in
vibemath.c: In function 'vmath_swarm_tornado':
vibemath.c:251:71: error: 'scale' undeclared (first use in this function); did you mean 'scalee'?
  251 |         __m256 v_height = _mm256_fnmadd_ps(_mm256_set1_ps(-24000.0f * scale), v_s, _mm256_set1_ps(-12000.0f * scale));
      |                                                                       ^~~~~
      |                                                                       scalee
vibemath.c: In function 'vmath_swarm_gyroscope':
vibemath.c:264:43: error: 'scale' undeclared (first use in this function); did you mean 'scalee'?
  264 |     __m256 v_r = _mm256_set1_ps(7000.0f * scale);
      |                                           ^~~~~
      |                                           scalee
vibemath.c: In function 'vmath_swarm_metal':
vibemath.c:297:48: error: 'scale' undeclared (first use in this function); did you mean 'scalee'?
  297 |     __m256 v_radius = _mm256_set1_ps(4000.0f * scale);
      |                                                ^~~~~
      |                                                scalee
vibemath.c: In function 'vmath_swarm_smales':
vibemath.c:328:53: error: 'scale' undeclared (first use in this function); did you mean 'scalee'?
  328 |     __m256 v_base_radius = _mm256_set1_ps(4000.0f * scale);
      |                                                     ^~~~~
      |                                                     scalee
